# obj_region_seg

./: .gitignore  README.md  data.py  testUnet.py  trainUnet.py
label_tool/: create_label_batch.py  create_label_by_pcd.py
label_tool/create_label_by_pcd/: CMakeLists.txt  compile.sh  create_label_by_pcd.cpp
label_tool/create_label_by_pcd/test_data/: 000000_pose.txt
